add_executable(1.1_is_unique                "1_is_unique/is_unique.cpp")
add_executable(1.1b_is_unique               "1_is_unique/is_unique_luis.cpp")

add_executable(1.2_check_permutation        "2_check_permutation/check_permutation.cpp")
add_executable(1.2b_check_permutation       "2_check_permutation/check_permutation_luis.cpp")

add_executable(1.3_urlify                   "3_urlify/URLify.cpp")

add_executable(1.4a_palindrome_permutation  "4_palindrome_permutation/solution_a.cpp")
add_executable(1.4b_palindrome_permutaion   "4_palindrome_permutation/solution_b.cpp")

add_executable(1.5a_one_way                 "5_one_way/solution_a.cpp")
add_executable(1.5b_one_way                 "5_one_way/solution_b.cpp")

add_executable(1.6_string_compression       "6_string_compression/string_compression.cpp")

add_executable(1.7_rotate_matrix            "7_rotate_matrix/rotate_matrix.cpp")

add_executable(1.8_zero_matrix              "8_zero_matrix/zero_matrix.cpp")

add_executable(1.9_string_rotation          "9_string_rotation/string_rotation.cpp")

